force-app/main/default/objects/EventQueue__c/EventQueue__c.object-meta.xml
<CustomObject>
    <label>Event Queue</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>