force-app/main/default/objects/EventQueue__c/fields/LastErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>LastErrorMessage__c</fullName>
    <label>Last Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>