force-app/main/default/objects/EventQueue__c/fields/NextAttempt__c.field-meta.xml
<CustomField>
    <fullName>NextAttempt__c</fullName>
    <formula>IF( 
  ISPICKVAL(Status__c, &#39;Queued&#39;), 
  CreatedDate + (Attempts__c / 24 / 60), 
  NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Attempt</label>
    <type>DateTime</type>
</CustomField>